福島Project/src/objects/JFK_CheckSheetM_JCR_Supplementary__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ActionAfterJudgement__c</fullName>
        <label>判定後のアクション</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryNo__c</fullName>
        <label>カテゴリNo.</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckKomoku__c</fullName>
        <label>チェック項目</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CheckNaiyo_After__c</fullName>
        <label>チェック内容解説_締め語</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CheckNaiyo__c</fullName>
        <label>チェック内容解説</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hosoku__c</fullName>
        <label>補足</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NoForShow__c</fullName>
        <label>No.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>No（カテゴリ別)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PasonaHoseiKa__c</fullName>
        <defaultValue>true</defaultValue>
        <label>パソナ補正可</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEQNo__c</fullName>
        <label>SEQNo.</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShowHanteiCheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>チェックシートにOK/NGボタンではなく、チェックボックスを表示する時、ON(True)</description>
        <label>判定用チェックボックス表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowTextBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>テキストボックス表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zokusei__c</fullName>
        <label>属性</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>審査シートマスタ(JCR_補充者)テンプレート</label>
</CustomObject>